# armor

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1772425474304-e1303dca48a6f.mjs
.github/workflows/: release.yml
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/client/_app/immutable/assets/: 0.BM3uZKYm.css  0.CYX4d9BG.css
.svelte-kit/output/client/_app/immutable/chunks/: -vVNzbT2.js  AeAXc8yW.js  BO-c5S7Y.js  CS3mhprW.js  CxLcX-3N.js  DBDMbGDQ.js  DGth7emk.js  DJtdpqmd.js  D_9tBarb.js  Da2QqrXs.js  Dt3_KZ0G.js  Dy2HbpQc.js  oPfA_SPB.js  r6lhEZ32.js
.svelte-kit/output/client/_app/immutable/entry/: app.BFjgyvEz.js  app.C7tC3lxf.js  start.AURrniCQ.js  start.CUP1gag6.js
.svelte-kit/output/client/_app/immutable/nodes/: 0.BbouLEfc.js  0.CDc7A8E7.js  1.BWL4wvKZ.js  1.BlLtPp6w.js  2.BQ-reGaV.js  2.DrPKt6oe.js  3.CSbfCQrH.js  3.DCbtLWBq.js  4.BBZrWDUn.js  4.COfsSw9m.js  5.CSEZaRNh.js  5.Cm_q06r7.js  6.BTs11I2V.js  6.DmyyB9aL.js
.svelte-kit/output/client/css/: franken-ui.css
.svelte-kit/output/prerendered/pages/: decrypt.html  encrypt.html
.svelte-kit/output/server/: index.js  manifest-full.js  manifest.js  remote-entry.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/_app/immutable/assets/: _error.CfaDyFbm.css
.svelte-kit/output/server/chunks/: Button.js  exports.js  index.js  internal.js  settings.js  shared.js  ssr.js  stores.js
.svelte-kit/output/server/entries/pages/: _error.svelte.js  _layout.svelte.js  _page.svelte.js
.svelte-kit/output/server/entries/pages/decrypt/: _page.svelte.js
.svelte-kit/output/server/entries/pages/encrypt/: _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js  4.js  5.js  6.js
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts
.svelte-kit/types/src/routes/decrypt/: $types.d.ts
.svelte-kit/types/src/routes/encrypt/: $types.d.ts
.svelte-kit/types/src/routes/keys/: $types.d.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: crypto.rs  keys.rs  mod.rs  settings.rs
src-tauri/src/core/: config.rs  crypto.rs  keyring.rs  mod.rs  storage.rs
src-tauri/src/models/: key.rs  mod.rs  result.rs
src/lib/api/: crypto.ts  keys.ts  settings.ts
src/lib/components/layout/: Sidebar.svelte  Topbar.svelte
src/lib/components/ui/: Button.svelte  Input.svelte  Modal.svelte
src/lib/stores/: settings.ts
src/lib/types/: key.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/decrypt/: +page.svelte
src/routes/encrypt/: +page.svelte
src/routes/keys/: +page.svelte
src/routes/settings/: +page.svelte
(+2 files in other folders)
