[package]
name = "armor"
version = "1.0.0"
description = "Offline PGP Desktop Application"
authors = ["ARMOR Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "armor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Core framework
tauri = { version = "2.9.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Cryptography
sequoia-openpgp = "1.22"
anyhow = "1.0"
thiserror = "1.0"

# Storage & utilities
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
rusqlite = { version = "0.30", features = ["bundled"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
opt-level = "z" # Optimize for size (which helps RAM/cache usage)

