[package]
name = "armor"
version = "1.0.0"
description = "Offline PGP Desktop Application"
authors = ["ARMOR Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "armor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Core framework
tauri = { version = "2.9.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Cryptography
# Use Pure Rust Crypto (crypto-rust) for ALL platforms.
# This solves the "missing pkg-config/nettle" on Windows and "trait bound" errors in crypto-cng.
# It also makes cross-compilation easier and strictly uses Rust dependencies.
# Added 'allow-variable-time-crypto' to fix macOS build failure (Sequoia requirement for RustCrypto backend)
sequoia-openpgp = { version = "1.22", default-features = false, features = ["compression", "crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
anyhow = "1.0"
thiserror = "1.0"

# Storage & utilities
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
rusqlite = { version = "0.30", features = ["bundled"] }

[profile.release]
codegen-units = 256 # Maximize parallelism
lto = false         # DISABLE Link Time Optimization (Huge speedup in linking time)
panic = "abort"
strip = true
opt-level = 2     # Reduce optimization from 3 to 2 (Much faster compile, slightly slower code)

